--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,17 @@ nav a:hover {
 }
 
 
+.html {
+    background: navajowhite;
+}
+.css {
+    background: grey;
+}
+
+.git {
+    background: pink;
+}
+
+.JavaScript {
+    background: powderblue;
+}
